--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <h1>Oliwier Strek</h1>
         <h3>And I&apos;m ready for an adventure.</h3>
         <p>
-          I'm a student of Applied Informatics at Jagiellonian University with a
-          keen interest in computer networks and Microsoft Azure. Seeking to
-          kickstart my career in the IT sector, I'm actively involved in the
+          I'm a student of Applied Computer Science at Jagiellonian University
+          with a keen interest in computer networks and Microsoft Azure. Seeking
+          to kickstart my career in the IT sector, I'm actively involved in the
           Microsoft Azure User Group Poland (Kraków) community. Participating in
           meetups and networking events provides me with valuable insights into
           how Azure works, helping me stay ahead in this dynamic field.
@@ -101,10 +101,43 @@
           knowledge allows me to efficiently route data and optimize traffic
           across network environments. In terms of programming, I have
           experience with C++ and Java, demonstrating a good foundation in
-          programming concepts and fundamentals. Additionally, I am skilled in
-          using MS Office, LaTeX, and Gimp for creating professional
-          documentation, data analysis, and basic graphic design.
+          programming concepts and fundamentals.
         </p>
+
+        <div class="button">
+          <a href="#azure"
+            ><span class="material-symbols-outlined"
+              >keyboard_double_arrow_down</span
+            ></a
+          >
+        </div>
+      </div>
+    </section>
+
+    <section id="azure" class="azure">
+      <div class="azure-content">
+        <div class="button">
+          <a href="#more"
+            ><span class="material-symbols-outlined"
+              >keyboard_double_arrow_up</span
+            ></a
+          >
+        </div>
+
+        <h3>This site is hosted on</h3>
+        <h1>Azure</h1>
+        <h3>And it&apos;s got what it takes.</h3>
+        <p>
+          I leveraged a storage account and created a container to store the
+          static files that make up my website. This setup provides a robust and
+          efficient foundation for my online presence. Azure's reliable
+          infrastructure ensures that my website is always available to
+          visitors, while the use of a storage account allows for easy
+          management and scalability.
+        </p>
+      </div>
+      <div class="diagram">
+        <img src="images/diagram.png" alt="" />
       </div>
     </section>
 
